Update event description

--- a/privacy-lab-building-the-privacy-frontier.html
+++ b/privacy-lab-building-the-privacy-frontier.html
@@ -7,7 +7,7 @@
 <ul>
 <li class="has-line-data" data-line-start="9" data-line-end="13">
 <p class="has-line-data" data-line-start="9" data-line-end="10"><strong>1:00PM EDT</strong> - <strong>Esther Onfroy</strong> of Defensive Lab Agency and <strong>PiRogue</strong> project <a href="https://pts-project.org">https://pts-project.org</a></p>
-<pre><code>Esther will demonstrate PiRogue tool suite (PTS), powerful software for mobile forensic &amp; network analysis.
+<pre><code>Esther will discuss PiRogue tool suite (PTS), powerful software for mobile forensic &amp; network analysis.
 </code></pre>
 </li>
 <li class="has-line-data" data-line-start="13" data-line-end="16">
